- Ajout du menu 'Gestion du type des actifs'.

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Models\BO\ClassificationProvisionsPret.cs" />
     <Compile Include="Models\BO\MotifPret.cs" />
     <Compile Include="Models\BO\Journal.cs" />
+    <Compile Include="Models\BO\TypeActif.cs" />
     <Compile Include="Models\BO\TypeGarantie.cs" />
     <Compile Include="Models\BO\TypePret.cs" />
     <Compile Include="Models\BO\UniteInstitutionnelle.cs" />
@@ -245,6 +246,7 @@
     <Compile Include="Models\DAO\ClassificationProvisionsPretDAO.cs" />
     <Compile Include="Models\DAO\MotifPretDAO.cs" />
     <Compile Include="Models\DAO\JournalDAO.cs" />
+    <Compile Include="Models\DAO\TypeActifDAO.cs" />
     <Compile Include="Models\DAO\TypeGarantieDAO.cs" />
     <Compile Include="Models\DAO\TypePretDAO.cs" />
     <Compile Include="Models\DAO\UniteInstitutionnelleDAO.cs" />
@@ -905,6 +907,7 @@
     <Content Include="Resources\js\Views\ConfigurationOperation-TypePret.js" />
     <Content Include="Resources\js\Views\ConfigurationOperation-TypeGarantie.js" />
     <Content Include="Resources\js\Views\ConfigurationOperation-Journal.js" />
+    <Content Include="Resources\js\Views\ConfigurationOperation-TypeActif.js" />
     <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
@@ -1310,6 +1313,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ConfigurationOperation\Journal.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypeActif\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypeActif.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
