--- a/GB/Web.config
+++ b/GB/Web.config
@@ -28,6 +28,8 @@
     <add key="TAILLE_MAX_IMAGE_IMPORTATION" value="250" />
     <!-- Format de présentation des date dans l'application -->
     <add key="FORMAT_DATE" value="dd/MM/yyyy" />
+    <!-- Mode de compilation de l'application pour son execution -->
+    <add key="MODE_DEV" value="true" />
     <!-- Version des builds successif -->
     <add key="VERSION_BUILD" value="24072018.2" />
   </appSettings>
