--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -203,6 +203,7 @@
     </Compile>
     <Compile Include="Models\ActionFilter\AuthentificationRequis.cs" />
     <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
+    <Compile Include="Models\BO\CompteBanque.cs" />
     <Compile Include="Models\BO\CompteAgence.cs" />
     <Compile Include="Models\BO\DirectionBudget.cs" />
     <Compile Include="Models\BO\BEACNationalite.cs" />
@@ -210,8 +211,11 @@
     <Compile Include="Models\BO\CongeBanque.cs" />
     <Compile Include="Models\BO\AutoriteSignature.cs" />
     <Compile Include="Models\BO\ClassificationProvisionsPret.cs" />
+    <Compile Include="Models\BO\Banque.cs" />
     <Compile Include="Models\BO\Profitabilite.cs" />
+    <Compile Include="Models\DAO\CompteBanqueDAO.cs" />
     <Compile Include="Models\DAO\CompteAgenceDAO.cs" />
+    <Compile Include="Models\DAO\BanqueDAO.cs" />
     <Compile Include="Models\DAO\ProfitabiliteDAO.cs" />
     <Compile Include="Models\GB\GBControllerUrlJS.cs" />
     <Compile Include="Models\BO\Compte.cs" />
@@ -296,6 +300,7 @@
   <ItemGroup>
     <Content Include="App_Data\Documentation.txt" />
     <Content Include="App_Data\Log.txt" />
+    <Content Include="App_Data\Notes.txt" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Plugins\animate.css\animate.css" />
@@ -897,6 +902,7 @@
     <Content Include="Resources\js\bootstrap.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\gb.menu.js" />
+    <Content Include="Resources\js\Views\ConfigurationBanque-CompteBanque.js" />
     <Content Include="Resources\js\Views\Erreur-Page.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-BEACNationalite.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-UniteInstitutionnelle.js" />
@@ -928,6 +934,7 @@
     <Content Include="Resources\js\Views\ConfigurationOperation-CompteConfiguration.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-CompteAgence.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Profitabilite.js" />
+    <Content Include="Resources\js\Views\ConfigurationBanque-Banque.js" />
     <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
@@ -1361,6 +1368,10 @@
     <Content Include="Views\ConfigurationBanque\CompteAgence.cshtml" />
     <Content Include="Views\ConfigurationBanque\Profitabilite\_Modals.cshtml" />
     <Content Include="Views\ConfigurationBanque\Profitabilite.cshtml" />
+    <Content Include="Views\ConfigurationBanque\CompteBanque\_Modals.cshtml" />
+    <Content Include="Views\ConfigurationBanque\CompteBanque.cshtml" />
+    <Content Include="Views\ConfigurationBanque\Banque\_Modals.cshtml" />
+    <Content Include="Views\ConfigurationBanque\Banque.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
