--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -203,6 +203,7 @@
     </Compile>
     <Compile Include="Models\ActionFilter\AuthentificationRequis.cs" />
     <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
+    <Compile Include="Models\BO\ParametreBudgetRevenu.cs" />
     <Compile Include="Models\BO\Societe.cs" />
     <Compile Include="Models\BO\CompteBanque.cs" />
     <Compile Include="Models\BO\CompteAgence.cs" />
@@ -215,6 +216,7 @@
     <Compile Include="Models\BO\Banque.cs" />
     <Compile Include="Models\BO\ResponsableRelationClient.cs" />
     <Compile Include="Models\BO\Profitabilite.cs" />
+    <Compile Include="Models\DAO\ParametreBudgetRevenuDAO.cs" />
     <Compile Include="Models\DAO\SocieteDAO.cs" />
     <Compile Include="Models\DAO\CompteBanqueDAO.cs" />
     <Compile Include="Models\DAO\CompteAgenceDAO.cs" />
@@ -906,6 +908,7 @@
     <Content Include="Resources\js\bootstrap.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\gb.menu.js" />
+    <Content Include="Resources\js\Views\ConfigurationBudget-ParametreBudgetRevenu.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-CompteBanque.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Societe.js" />
     <Content Include="Resources\js\Views\Erreur-Page.js" />
@@ -1382,6 +1385,8 @@
     <Content Include="Views\ConfigurationBanque\ResponsableRelationClient.cshtml" />
     <Content Include="Views\ConfigurationBanque\Societe\_Modals.cshtml" />
     <Content Include="Views\ConfigurationBanque\Societe.cshtml" />
+    <Content Include="Views\ConfigurationBudget\ParametreBudgetRevenu\_Modals.cshtml" />
+    <Content Include="Views\ConfigurationBudget\ParametreBudgetRevenu.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
