--- a/GB/Web.config
+++ b/GB/Web.config
@@ -30,9 +30,9 @@
     <!-- Activation de la connexion d'un utilisateur sur plusieurs postes -->
     <add key="CONNEXION_UTILISATEUR_MULTI_POSTE" value="true" />
     <!-- Activer la connexion de l'application à la base de données -->
-    <add key="CONNEXION_DB_BANKINGENTITIES" value="true" />
+    <add key="CONNEXION_DB_BANKINGENTITIES" value="false" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="27082018.3" />
+    <add key="VERSION_BUILD" value="29082018.1" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
