- Mise à jour de 'application.

--- a/GB.Tests/GB.Tests.csproj
+++ b/GB.Tests/GB.Tests.csproj
@@ -90,7 +90,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Models\DAO\ActiviteEconomiqueDAOTest.cs" />
     <Compile Include="Models\DAO\DeviseDAOTest.cs" />
+    <Compile Include="Models\Interfaces\IDAOTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
