--- a/GB/Web.config
+++ b/GB/Web.config
@@ -30,7 +30,7 @@
     <!-- Activation de la connexion d'un utilisateur sur plusieurs postes -->
     <add key="CONNEXION_UTILISATEUR_MULTI_POSTE" value="true" />
     <!-- Activer la connexion de l'application à la base de données -->
-    <add key="CONNEXION_DB_BANKINGENTITIES" value="true" />
+    <add key="CONNEXION_DB_BANKINGENTITIES" value="false" />
     <!-- Version des builds successif -->
     <add key="VERSION_BUILD" value="31082018.1" />
   </appSettings>
